# lorechain

./: .gitignore  README.md  STUDY_LOG.md  loreweaver_langchain_plan.md  pyproject.toml
agent/: __init__.py  council.py  counsil.py  hello.py  ingest.py  lorechain_cli.py  loremaster.py
tests/: test_council.py
worldbook/: 01_characters.md  02_places.md  03_factions.md  04_supplements.md  05_events.md
